@@ -1,25 +1,17 @@
-fp.sim.matrix <- function(fplist, method='tanimoto') {
-  fptype <- class(fplist[[1]])
-  if ("fingerprint" %in% fptype) {
-    size <- fplist[[1]]@nbit
-    sim <- matrix(0,nr=length(fplist), nc=length(fplist))
-    for (i in 1:(length(fplist)-1)) {
-      v <- unlist(lapply( fplist[(i+1):length(fplist)], distance, fp2=fplist[[i]], method=method))
-      sim[i,(i+1):length(fplist)] <- v
-      sim[(i+1):length(fplist),i] <- v
-    }
-    diag(sim) <- 1.0
-    sim
-  } else {
-    sim <- matrix(0,nr=length(fplist), nc=length(fplist))
-    for (i in 1:(length(fplist)-1)) {
-      v <- unlist(lapply( fplist[(i+1):length(fplist)], distance, fp2=fplist[[i]], method=method))
-      sim[i,(i+1):length(fplist)] <- v
-      sim[(i+1):length(fplist),i] <- v
-    }
-    diag(sim) <- 1.0
-    sim
+fp.sim.matrix <- function(fplist, fplist2=NULL, method='tanimoto') {
+
+  if (!is.null(fplist2)) {
+    return(do.call('rbind', lapply(fplist, function(fp) unlist(lapply(fplist2, function(x) distance(x,fp))))))
   }
+  
+  sim <- matrix(0,nr=length(fplist), nc=length(fplist))
+  for (i in 1:(length(fplist)-1)) {
+    v <- unlist(lapply( fplist[(i+1):length(fplist)], distance, fp2=fplist[[i]], method=method))
+    sim[i,(i+1):length(fplist)] <- v
+    sim[(i+1):length(fplist),i] <- v
+  }
+  diag(sim) <- 1.0
+  return(sim)
 }
 
 ## Takes the fingerprints, P bits,  for a set of N molecules supplied as
