@@ -1,3 +1,12 @@
+2011-07-26  Rajarshi Guha  <guhar@Rajarshi-Guha-MacBook-Pro.local>
+
+	* man/sim.Rd: Updated man page for fp.sim.matrix to indicate the
+	use of two fingerprint lists
+
+	* R/matrix.R (fp.sim.matrix): Updated similarity matrix
+	calculation to support cross-similarity (ie, similarity matrix
+	from two (possibly different lengths) lists of fingerprints
+
 2011-06-03  Rajarshi Guha  <guhar@Rajarshi-Guha-MacBook-Pro.local>
 
 	* src/fpdistance.c: Cleaned up uncessary headers and unused variables
